--- a/app/src/main/res/layout/activity_apuestas_publicas.xml
+++ b/app/src/main/res/layout/activity_apuestas_publicas.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".controller.ApPublicasController">
+    android:layout_height="match_parent">
 
-    <include layout="@layout/content_apuestas_publicas" />
-
-</android.support.design.widget.CoordinatorLayout>
+    <TextView
+        android:id="@+id/nombre_apuesta"
+        android:text="@string/apuestas_publicas"
+        style="@style/TitleBetList" />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView_apPub"
+        android:layout_weight="1" />
+</LinearLayout>
