--- a/app/src/main/res/layout/content_apuestas_publicas.xml
+++ b/app/src/main/res/layout/content_apuestas_publicas.xml
@@ -3,10 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cv_apublicas"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="5dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginLeft="10dp">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,12 +17,25 @@
             android:layout_height="50dp"
             android:src="@mipmap/ic_launcher" />
 
-        <TextView
-            android:id="@+id/nombre_apuesta"
-            android:text="bla bla"
-            android:layout_gravity="center"
-            android:layout_width="160dp"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/nombre_apuesta"
+                android:text="@string/default_text"
+                style="@style/TitleBet"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/descripcion_apuesta"
+                android:text="@string/default_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
