--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,21 @@
         <item name="android:layout_height">1dp</item>
         <item name="android:background">?android:attr/listDivider</item>
     </style>
+
+    <!-- Estilos de Apuestas Publicas -->
+    <style name="TitleBet">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">19dp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+    <style name="TitleBetList">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">21dp</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:background">#07570E</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">35dp</item>
+        <item name="android:gravity">center</item>
+    </style>
+    <!-- Estilos de Apuestas Publicas -->
 </resources>
